# fractals

./: .gitignore  CMakeLists.txt  main.c  mandelbrot.c  mandelbrot.h  utils.h
Classes/: AppDelegate.cpp  FractalScene.cpp  FractalScene.h  FractalSprite.cpp  FractalSprite.h  MandelbrotFractalScene.cpp  MandelbrotFractalScene.h  MandelbrotSprite.cpp  MandelbrotSprite.h  MenuScene.cpp  MenuScene.h  ShaderSprite.cpp  ShaderSprite.h  helpers.h
Resources/shaders/: mandelbrot.fsh
fractals_cli/: CMakeLists.txt
fractals_cli/src/: main.cpp
fractals_gui/: CMakeLists.txt
fractals_gui/src/: main.cpp
libfractals/: CMakeLists.txt
libfractals/includes/fractals/: mandelbrot.h  utils.h
libfractals/src/: mandelbrot.cpp  utils.cpp
proj.android/: .project  AndroidManifest.xml  README.md  build.xml
proj.android/jni/: Android.mk
proj.android/res/values/: strings.xml
proj.ios_mac/fractals.xcodeproj/: project.pbxproj
proj.win32/: fractals.sln
